<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activities.LoginActivity">

    <TextView
        android:id="@+id/txtInst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/grandista_regular"
        android:text="@string/instagram"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/edEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ed_bg"
        android:hint="@string/phone"
        android:inputType="textEmailAddress|textPersonName"
        android:padding="13dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/edPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInst" />

    <EditText
        android:id="@+id/edPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ed_bg"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="13dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:drawableRight="@drawable/visibility_off"
        android:longClickable="false"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmailAddress" />

    <TextView
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_create_new_account"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/login"
        android:textColor="#EFEFEF"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/txtForgotten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPassword" />

    <TextView
        android:id="@+id/txtForgotten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/forgotten_your_loogin_details"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/txtGetHelp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

    <TextView
        android:id="@+id/txtGetHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:text="@string/get_help_with_logging_in"
        android:textColor="#0998D9"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/txtForgotten"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtForgotten"
        app:layout_constraintTop_toTopOf="@id/txtForgotten" />

    <View
        android:id="@+id/view1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:background="#C4BFBF"
        app:layout_constraintEnd_toStartOf="@+id/txtOr"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtForgotten" />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:text="@string/or"
        android:textColor="#7C7A7A"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/view1"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view1"
        app:layout_constraintTop_toTopOf="@id/view1" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:background="#C4BFBF"
        app:layout_constraintBottom_toBottomOf="@+id/txtOr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtOr"
        app:layout_constraintTop_toTopOf="@id/txtOr" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/facebookIcon"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="150dp"
        android:src="@drawable/face"
        app:layout_constraintBottom_toTopOf="@+id/view3"
        app:layout_constraintEnd_toStartOf="@+id/loginWithFacebook"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtOr" />

    <TextView
        android:id="@+id/loginWithFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:padding="1dp"
        android:text="Log In With Facebook"
        android:textColor="#0998D9"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/facebookIcon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/facebookIcon"
        app:layout_constraintTop_toTopOf="@id/facebookIcon" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="16dp"
        android:background="#C4BFBF"
        app:layout_constraintBottom_toTopOf="@id/txtDoNot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtDoNot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="Don't have an account?"
        android:textSize="12sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:text="Sign Up."
        android:textColor="#0998D9"
        android:textSize="13sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/txtDoNot"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/txtDoNot"
        app:layout_constraintTop_toTopOf="@id/txtDoNot" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:visibility="invisible"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.371" />


</androidx.constraintlayout.widget.ConstraintLayout>